--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="155857398.png" alt="">
         </div>
         <div class="home-content">
-            <h1>Hi, It's <span>Ohm/span></h1>
+            <h1>Hi, It's adam</h1>
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>Professional Video Editor/ Web designer / Web Developer /Graphic Designer.</p>
             <div class="social-icons">
